# talentforge

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  test_neo4j.py
app/: main.py
app/core/: config.py  database.py  storage.py
app/extraction/: __init__.py  entity_resolver.py  kg_loader.py  llm_extractor.py  parser.py  pipeline.py  prompts.py
app/query/: job_matching.py  matcher.py
app/schemas/: __init__.py  cv_extraction.py  query.py
data/cvs/: cv_002_ava_whitmore.docx  cv_003_doruk_aksu.docx  cv_006_ilgin_ersoy.docx  cv_007_eylul_cora.docx  cv_013_gokce_tuna.docx  cv_014_hazal_basar.docx  cv_015_isil_onel.docx  cv_018_jale_deniz.docx  cv_020_lale_meric.docx  cv_023_orkun_bora.docx  cv_024_ethan_morgan.docx  cv_026_ruya_kar.docx  cv_027_sude_alkan.docx  cv_031_lucas_reed.docx  cv_035_zehra_oz.docx  cv_039_sophia_parker.docx  cv_044_firat_arca.docx  cv_047_mason_foster.docx  cv_048_idil_soysal.docx  cv_059_simal_gur.docx  cv_060_jack_sullivan.docx  cv_061_taha_yoner.docx  cv_062_ulku_aksoy.docx  cv_063_volkan_sayar.docx  cv_064_yaren_bas.docx  cv_066_ziya_ergin.docx  cv_067_asya_narin.docx  cv_069_daniel_price.docx  cv_071_ceylan_ustun.docx  cv_075_mia_reynolds.docx  (+15 more)
evaluation/: README_THESIS_TESTS.md  ablation_runner.py  dataset_manifest.csv  dataset_manifest.json  dataset_summary.json  entity_resolution_targets.json  evaluate_ablation_triples.py  evaluate_entity_resolution.py  evaluate_matching_ground_truth.py  golden_extractions_pretty.json  matching_ground_truth.json  thesis_report.py
frontend/: app.js  index.html  styles.css
(+121 files in other folders)
